	-- HOCON resources are now loaded as a single group, so that resolution of substitutions
	   works across multiple files.
	-- Fixed bug in HOCON support where files that include substitutions like ${myScope.varName}
	   would throw a ConfigException.NotResolved. These substitutions are now resolved. Many thanks
	   to Stjepan Buljat for calling attention to this issue.
	-- Support standard HOCON config files application.properties and application.json as well
	   as application.conf
	-- Fixed ClassCastException when (now deprecated!) usesTraditionalReflectiveProxies is set to
	   true. Many thanks to Konrad Garus for reporting the issue.
	-- NewProxyConnectionGenerator has been modified so that Connections only mark transactions
	   as known-resolved after the putatively resolving operation has successfully completed,
	   rather than when it is merely attempted.
	-- With FINEST/TRACE debug logging, full JVM stack traces are now emitted during any
	   ThreadPoolAsynchronousRunner APPARENT DEADLOCKS, to help debug any deadlocks within the JVM.
	-- Made constructors of delegated proxies package-visible rather than public. Many thanks to 
	   Oliver Zemann for calling attention to this issue.
	-- Some fixes and improvements to cfg and log libraries, so that fewer superfluous warnings
	   get emitted on startup.
c3p0-0.9.5-pre2
	-- Modified unwrap / isWrapperFor methods in proxies to be more permissive, to accept class
	   objects for superinterfaces of the wrapped interface as well as of implementation
	   classes.
	-- Added support for SLF4J / logback logging, defined short aliases for adapters to
	   the various logging libraries, updated documentation with new logging features
	-- Added and documented HOCON / typesafe-config libary support, available if (and only if)
	   the typesafe-config library is included with the application.
	-- Refactored mchange-commons-java to eliminate very rare potential deadlocks under simultaneous