@@ -33,23 +33,29 @@
  * 
  */
 
-package com.mchange.v2.c3p0.util;
+package com.mchange.v2.c3p0.debug;
 
 import java.sql.*;
+import com.mchange.v2.log.*;
+import com.mchange.v2.c3p0.*;
 import com.mchange.v2.sql.filter.*;
 
-/**
- * @deprecated Please use com.mchange.v2.c3p0.debug.CloseLoggingConnectionWrapper
- */
-public class CloseReportingConnectionWrapper extends FilterConnection
+public class CloseLoggingConnectionWrapper extends FilterConnection
 {
-    public CloseReportingConnectionWrapper( Connection conn )
-    { super( conn ); }
+    final static MLogger logger = MLog.getLogger( CloseLoggingConnectionWrapper.class );
+
+    final MLevel level;
+
+    public CloseLoggingConnectionWrapper( Connection conn, MLevel level )
+    { 
+	super( conn ); 
+	this.level = level;
+    }
 
     public void close() throws SQLException
     {
-	//System.err.print("ADRIAN -- ");
-	new SQLWarning("Connection.close() called!").printStackTrace();
 	super.close();
+	if ( logger.isLoggable( level ) )
+	    logger.log( level, "DEBUG: A Connection has closed been close()ed without error.", 	new SQLWarning("DEBUG STACK TRACE -- Connection.close() was called.") );
     }
 }
